# kivsee-proto

./: CMakeLists.txt  LICENSE  Makefile  README.md  buf.gen.yaml  buf.yaml  library.json  pyproject.toml
.github/workflows/: build.yml  generate.yml
gen-nanopb/: Dockerfile  requirements.txt
kivsee/proto/: effects.proto  segments.proto
kivsee/proto/render/v1/: animation.options  animation.proto  effects.options  effects.proto  functions.options  functions.proto  segments.options  segments.proto
