[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kivsee-proto"
version = "0.1.0"
description = "Kivsee Protocol Buffers"
requires-python = ">=3.7"
authors = [
    {name = "Kivsee Team"}
]
dependencies = [
    "protobuf>=3.20.0",
]

[tool.setuptools]
package-dir = {"" = "gen/python"}
packages = ["kivsee"] 